--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -18,11 +18,14 @@ button {
 .table-container {
   display: flex;
   justify-content: center;
+  margin-top: 20px; /* Adjust the top margin as desired */
+  margin-bottom: 20px; /* Adjust the bottom margin as desired */
 }
 
 table {
   border-collapse: collapse;
-  width: 175%;
+  width: 100%; /* Adjust the width as desired */
+  max-width: 1200px; /* Adjust the maximum width as desired */
 }
 
 th, td {
@@ -88,4 +91,3 @@ th {
     <button type="submit">New Post</button>
 </form>
 {% endblock %}
-
