--- a/templates/update_post.html
+++ b/templates/update_post.html
@@ -1,1 +1,46 @@
+{% extends "home.html" %}
+{% block title %}{{ fetch[1] }}{% endblock %}
+{% block head %}
+<link rel="stylesheet" href="/static/style.css" />
+<style>
+.button-container {
+  text-align: right;
+  margin-bottom: 10px;
+}
 
+
+button {
+  padding: 8px 18px;
+  font-size: 14px;
+}
+
+
+a {
+  font-size: 20px;
+}
+
+
+h1 {
+  text-decoration: underline;
+}
+
+
+textarea {
+  width: 100%;
+  height: 300px; /* Adjust the height as desired */
+}
+</style>
+{% endblock %}
+{% block content %}
+
+<h1>{{fetch[1]}}</h1>
+<h2>By:{{fetch[4]}}</h2>
+<h3>{{fetch[3]}}</h3>
+<div class="button-container">
+<form action="/post/{{ fetch[0] }}/edit" method="post">
+    <textarea name="post" id="post" rows="10" cols="50">{{fetch[2]}}</textarea>
+    <button type="submit">Update Post</button>
+</form>
+</div>
+<a href="/dashboard">Back to home</a>   
+{% endblock %}
