--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -18,14 +18,14 @@ button {
 .table-container {
   display: flex;
   justify-content: center;
-  margin-top: 20px; /* Adjust the top margin as desired */
-  margin-bottom: 20px; /* Adjust the bottom margin as desired */
+  margin-top: 20px; 
+  margin-bottom: 20px;
 }
 
 table {
   border-collapse: collapse;
-  width: 100%; /* Adjust the width as desired */
-  max-width: 1200px; /* Adjust the maximum width as desired */
+  width: 100%; 
+  max-width: 1200px; 
 }
 
 th, td {
