--- a/templates/update_post.html
+++ b/templates/update_post.html
@@ -27,7 +27,7 @@ h1 {
 
 textarea {
   width: 100%;
-  height: 300px; /* Adjust the height as desired */
+  height: 300px;
 }
 </style>
 {% endblock %}
